kubernetes/apps/ca-portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ca-portal
  labels:
    pod-security.kubernetes.io/enforce: restricted
